Fix: overflow contact-list

--- a/css/layout.css
+++ b/css/layout.css
@@ -49,7 +49,6 @@ header{
 .ms-boozapp-header{
     height: 100%;
     width: 100%;
-    overflow: hidden;
 }
 
 /*---------------
