--- a/css/utilities.css
+++ b/css/utilities.css
@@ -10,7 +10,7 @@
     AVATAR
 --------------------*/
 
-.ms-my-avatar img{
+.ms-header-avatar img{
     height: 2.75rem;
     width: 2.75rem;
     border-radius: 50%;
@@ -29,7 +29,7 @@
 .nav-contacts{
     height: calc(100% - 4.375rem);
     display: flex;
-    /* flex-direction: column; */
+    overflow: hidden;
 }
 
 .ms-bell-notify{
